Solves api https error

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "memory-game",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kqarlos.github.io/memory-game/",
+  "homepage": "https://kqarlos.github.io/memory-game",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
