--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "homepage": "https://kqarlos.github.io/memory-game",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
+    "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
     "gh-pages": "^2.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.3.1"
+    "react-scripts": "^4.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
